ajustei o index e o readme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <header>
       <!--Menu-->
       <nav class="menu">
-         <a href="" class="logo">LOGO</a>
+         <a href="" class="logo">LOGO here</a>
 
          <ul>
             <li><a href="" class="ativo">Home</a></li>
@@ -23,7 +23,7 @@
       <section class="principal">
          <h2>Desenvolvimento de um simple site</h2>
          <div class="links">
-            <a href="">Se inscreva</a>
+            <a href="">Clique aqui</a>
          </div>
       </section>
    </header>
